bases/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: docker.io/linuxserver/jellyfin:10.8.10
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/downloads
          name: downloads
          readOnly: True
        - mountPath: /data/media
          name: media
          readOnly: True
        - mountPath: /config
          name: jellyfin-config
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc-jf
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
