bases/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: jellyfin-ingress
 annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
spec:
 tls:
 - hosts:
   - jellyfin.local
   secretName: jellyfin-tls-secret
 rules:
 - host: jellyfin.local
   http:
     paths:
     - backend:
         service:
           name: jellyfin
           port:
             number: 8096
       path: /
       pathType: Prefix
